# dismissal-report

./: .gitignore  README.md  pyproject.toml
dismissal_report/: db_conf.py  dismissal.py
dismissal_report/config/: db_conf.ini.exemple
